# inclass

week01/: Makefile
week01/c/: 01_defines.c  02_enums.c  03_structs.c  04_pointers.c  05_pointer_arith.c  06_arrays.c  07_strings.c  08_booleans.c  09_control_flow.c  10_functions.c  11_cmdline.c  12_printf.c  Makefile
week01/rust/: Cargo.toml
week02/compare/: Makefile  memory.c  memory.rs
week03/c_viz/: lab02.c  ntlang.h  parse.c  scan.c
week03/c_viz2/: Makefile  lab02.c  ntlang.h  parse.c  scan.c
week04/project01-starter/: Makefile  README.md
week04/project01-starter/c/: Makefile  ntlang.h  project01
week04/project01-starter/c/project01.dSYM/Contents/: Info.plist
week04/project01-starter/c/project01.dSYM/Contents/Resources/DWARF/: project01
week04/project01-starter/c/project01.dSYM/Contents/Resources/Relocations/aarch64/: project01.yml
week04/project01-starter/rust/: Cargo.toml
week04/project01-starter/rust/src/: eval.rs  main.rs  parse.rs  scan.rs
week05/: Cargo.toml  build.rs
week05/asm/: add1_s.s  add3arr_s.s  first_s.s
week06/: Cargo.toml  build.rs
week06/asm/: add4f_callee_s.s  add4f_s.s  call_s.s  factrec_s.s  inrange_s.s  sumarr_idx_s.s  sumarr_ptr_s.s
week07/: build.rs
week07/asm/: bits_s.s  get_bitseq_s.s  intdr_s.s  strcpy_s.s  strlen_s.s
week07/examples/: Cargo.toml
week07/project02-starter/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
week07/project02-starter/asm/: codegen_main.s  get_bitseq_s.s  get_bitseq_signed_s.s  pack_bytes_s.s  rstr_rec_s.s  rstr_s.s  unpack_bytes_s.s
week07/project02-starter/c/: codegen_main.c
week09/: .gdbinit  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  riscv-debug  riscv-run
week09/.cargo/: config.toml
week09/src/: bits.rs  main.rs  rv_emu.rs
