[package]
name = "week05"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"

[[bin]]
name = "first"
path = "src/bin/first.rs"

[[bin]]
name = "add1"
path = "src/bin/add1.rs"

[[bin]]
name = "add3"
path = "src/bin/add3.rs"

[[bin]]
name = "add3arr"
path = "src/bin/add3arr.rs"

[[bin]]
name = "ifelse"
path = "src/bin/ifelse.rs"

[[bin]]
name = "loop"
path = "src/bin/loop.rs"
